--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo-reigstry-etcd3</artifactId>
+    <artifactId>dubbo-registry-etcd3</artifactId>
 
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
